# heron-raven

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: raven_tests.yml
src/: edge.cpp  edge.h  extended_overlap.cpp  extended_overlap.h  graph.cpp  graph.hpp  graph_assembler.cpp  graph_assembler.h  graph_assembler_bubbles.h  graph_assembler_transitive.cpp  graph_constructor.cpp  graph_constructor.h  graph_polisher.cpp  graph_polisher.h  main.cpp  marked_edge.h  node.cpp  node.h  option_manager.cpp  option_manager.h  overlap_parser.cpp  overlap_parser.h  parser.cpp  parser.h  pile.cpp  pile.hpp  polymer_manager.cpp  polymer_manager.h  read_preprocessing.cpp  read_preprocessing.h  state_manager.h  unitig.cpp  unitig.h
src/graph_assembler/: graph_assembler.cpp  graph_assembler.h  graph_assembler_bubbles.cpp  graph_assembler_tips.cpp  graph_assembler_tips.h  graph_assembler_transitive.h
src/graph_constructor/: annotation_helpers.h  extended_overlap.cpp  extended_overlap.h  graph_constructor.cpp  graph_constructor.h  overlap.h  overlap_helpers.h  overlap_parser.cpp
test/: raven_test.cpp
